--- a/welcome/welcome.css
+++ b/welcome/welcome.css
@@ -73,11 +73,11 @@ ul {
     border: 0;
     background-color: #72bcbd;
     transition: 0.3s;
+    cursor: not-allowed;
 }
 
 .cta:hover{
     background-color: #75FBFD;
     box-shadow: #75FBFD 0px 0px 20px;
     transition: 0.3s;
-    cursor: pointer;
 }
