--- a/welcome/welcome.css
+++ b/welcome/welcome.css
@@ -71,7 +71,7 @@ ul {
     font-size: 18px;
     border-radius: 0;
     border: 0;
-    background-color: #72bcbd;
+    background-color: #75FBFD;
     transition: 0.3s;
     cursor: not-allowed;
 }
