--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -15,5 +15,91 @@
     border-radius: 50%;
 
 }
+body {
+    background-image: url("/assets/bg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    color: white; /* Testo bianco per tutto il body */
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centra il contenuto verticalmente */
+    justify-content: center; /* Centra il contenuto orizzontalmente */
+    height: 100vh; 
+}
+
+header {
+    display: flex;
+    align-items: center; /* Centra l'immagine e il testo orizzontalmente */
+    justify-content: flex-start; /* Allinea l'immagine a sinistra */
+    margin: 20px; /* Margine per separare il contenuto dal bordo */
+}
+header img {
+    width: 150px; 
+    margin-right: 10px; /* Margine a destra per separare il logo dal testo */
+}
+
+header h1 {
+    color: white; 
+}
 
 
+.tondo {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 5px solid #00FFFF ; /* Colore celeste per il bordo */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+    color: white; /* Colore celeste per il numero dei secondi */
+    text-align: center;
+}
+
+.seconds{
+    font-size: 150px;
+}
+
+#time{
+    font-size: 40px;
+}
+h3#questionNumber {
+    font-size: 18px;
+    color: #ffffff; /* Testo bianco */
+    margin-bottom: 10px;
+}
+
+/* Aggiunta dello stile per le risposte con radio button */
+div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+input[type=radio] {
+    display: none;
+}
+
+input[type=radio]+label {
+    cursor: pointer;
+    padding: 1.5em;
+    background: blue;
+    color: white;
+    border-radius: 8px; /* Aggiunto bordo arrotondato per simularne l'aspetto di un bottone */
+    margin: 5px 0; /* Aggiunto margine per separare le risposte */
+    transition: background 0.2s; /* Animazione del colore di sfondo al passaggio del cursore */
+}
+
+input[type=radio]+label:hover {
+    background: #1E90FF; /* Cambio del colore di sfondo al passaggio del cursore */
+}
+
+input[type=radio]:checked+label {
+    background: red;
+}
