--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -100,6 +100,10 @@ input[type=radio]:checked+label {
     margin: 0px;
 }
 
+.testing .numberOfQuestion {
+    user-select: none;
+}
+
 
 /* css results  (SERENA) */
 
