--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -138,7 +138,7 @@ input[type=radio]:checked+label {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-basis: 50%;
     flex-wrap: wrap;
     gap: 10px;
@@ -182,11 +182,11 @@ img {
 }
 
 h4.correctAnswersNum {
-    color: white;                
+    color: #00FFFF;                
     text-align: center;
 }
 h4.wrongAnswersNum {
-    color: white;                      
+    color: #9D1D8F;                      
     text-align: center;
 }
 
@@ -213,4 +213,10 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
+}
+
+.bottom {
+    position: absolute;
+    bottom: 30%;
+    right: 39%;
 }
