--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -1,7 +1,7 @@
 /* css quiz */
 
 body {
-    background-image: url("/assets/bg.jpg");
+    background-image: url("../assets/bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
